[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Puntaje.gd" type="Script" id=1]
[ext_resource path="res://assets/img/menu.png" type="Texture" id=2]
[ext_resource path="res://assets/img/menu_boton.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="volver_jugar" type="TextureButton" parent="."]
margin_left = 480.0
margin_top = 384.0
margin_right = 760.0
margin_bottom = 576.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a_menu" type="TextureButton" parent="."]
margin_left = 168.0
margin_top = 384.0
margin_right = 456.0
margin_bottom = 576.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="perfecto_Label" type="Label" parent="."]
margin_left = 352.0
margin_top = 48.0
margin_right = 472.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.2, 0.12549, 0.345098, 1 )
text = "PERFECTO:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bien_Label" type="Label" parent="."]
margin_left = 352.0
margin_top = 97.0
margin_right = 440.0
margin_bottom = 112.0
custom_colors/font_color = Color( 0.2, 0.12549, 0.345098, 1 )
text = "BIEN:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ok_Label" type="Label" parent="."]
margin_left = 352.0
margin_top = 144.0
margin_right = 440.0
margin_bottom = 168.0
custom_colors/font_color = Color( 0.2, 0.12549, 0.345098, 1 )
text = "OKAY:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="missed_Label" type="Label" parent="."]
margin_left = 352.0
margin_top = 184.0
margin_right = 440.0
margin_bottom = 208.0
custom_colors/font_color = Color( 0.2, 0.12549, 0.345098, 1 )
text = "PERDIDOS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_Label" type="Label" parent="."]
margin_left = 432.0
margin_top = 272.0
margin_right = 520.0
margin_bottom = 296.0
custom_colors/font_color = Color( 0.2, 0.12549, 0.345098, 1 )
text = "SCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="perfect_num" type="Label" parent="."]
margin_left = 464.0
margin_top = 48.0
margin_right = 504.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( -240, 304 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bien_num" type="Label" parent="."]
margin_left = 472.0
margin_top = 96.0
margin_right = 512.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( -240, 304 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ok_num" type="Label" parent="."]
margin_left = 472.0
margin_top = 144.0
margin_right = 512.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( -240, 304 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="missed_num" type="Label" parent="."]
margin_left = 448.0
margin_top = 184.0
margin_right = 488.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( -240, 304 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_num" type="Label" parent="."]
margin_left = 560.0
margin_top = 272.0
margin_right = 600.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( -240, 304 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="volver_jugar" to="." method="_on_volver_jugar_pressed"]
[connection signal="pressed" from="a_menu" to="." method="_on_a_menu_pressed"]
